task5/tests/group/testsHW5/output/test2.out
lli: <stdin>:26:15: error: use of undefined value '%-22045'
%t1 = zext i8 %-22045 to i32
              ^

